--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <pre id="output"></pre>
 
     <xml id="toolbox" style="display: none">
-        <block type="comment_block"></block>
+        <block type="comment"></block>
     </xml>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="vb_blocks/blocks.js"></script>
